--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test:1.7.20"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
 }
 
 kapt {
