--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
@@ -66,6 +69,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test:1.7.20"
     testImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
+    testImplementation 'org.robolectric:robolectric:4.9'
+    testImplementation "androidx.test:core:1.5.0"
+    testImplementation "androidx.test:core-ktx:1.5.0"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.5"
+    testImplementation "androidx.test.espresso:espresso-core:3.5.1"
 }
 
 kapt {
